unpackaged/objects/Order_bundle__c.object
<CustomObject>
  <fields>
    <fullName>Dealer_price__c</fullName>
    <label>Dealer price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>FOC_delivery__c</fullName>
    <inlineHelpText>From where should the Free of charge products in the bundle be delivered?</inlineHelpText>
    <label>FOC delivery</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Dealer</fullName>
        </value>
        <value>
          <fullName>Customer service</fullName>
        </value>
        <value>
          <fullName>Sales rep</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Order_Bundle_Discount_Amount__c</fullName>
    <label>Order Bundle Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Order_Bundle_Discount__c</fullName>
    <formula>Quantity__c * Product_bundle__r.Total_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Bundle Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order bundles</relationshipLabel>
    <relationshipName>Order_bundles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Product_bundle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product bundle</label>
    <referenceTo>Product_bundle__c</referenceTo>
    <relationshipLabel>Order bundles</relationshipLabel>
    <relationshipName>Order_bundles</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Total_price__c</fullName>
    <label>Total price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <label>Order bundle</label>
  <nameField>
    <displayFormat>Bundle{0000}</displayFormat>
    <label>Order bundle Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Order bundles</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>